--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <!-- <div class="navlinks"> -->
                     <ul id="navlinks">
                         <li id="one" onclick="makeActive(this)">Home</li>
-                        <!-- <li id="two" onclick="makeActive(this)">Services</li> -->
+                        <li id="two" onclick="makeActive(this)">Services</li>
                         <li id="three" onclick="makeActive(this)">Store</li>
                         <li id="four" onclick="makeActive(this)">Jobs</li>
                         <li id="five" onclick="makeActive(this)">Appointment</li>
@@ -45,8 +45,8 @@
         <!--this is the parent class of all the pages-->
         <div class="container">
             <div class="one">
-                <h3>YOU BREAK IT</h3>
-                <h1>WE FIX IT</h1>
+                <h3>YOU BREAK IT <strong>?</strong></h3>
+                <h1>WE FIX IT <strong>!</strong></h1>
                 <p>Lorem ipsum dolor sit amet consectetur cidunt necessitatibus, assumenda obcaecati sed? Nobis porro, sapiente labore ex similique facere! Consectetur architecto quo, dicta neque quae animi dolores est rem.</P>
                 <button>FIX PC</button>
                 <br><br><br><br><br><br>
@@ -62,13 +62,13 @@
                     </div>
                     <div class="items">
                         <div class="title">
-                            SOFTWARE ISSUES
+                            APP INSTALLATIONS
                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
                     </div>
                     <div class="items">
                         <div class="title">
-                            TROUBLESHOOTING
+                            PC TROUBLESHOOTING
                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
                     </div>
@@ -101,8 +101,32 @@
                             LAPTOP ACCESSORIES
                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
-
                     </div>
+                    <div class="items">
+                        <div class="title">
+                            VIRUS AND MALWARE ATTACK
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
+                    </div>
+                    <div class="items">
+                        <div class="title">
+                            HARDWARE REPAIRS 
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
+                    </div>
+                    <div class="items">
+                        <div class="title">
+                            HARDWARE REPLACEMENT
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
+                    </div>
+                    <div class="items">
+                        <div class="title">
+                            LAPTOP ACCESSORIES
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae magni a quas minima corrupti!</p>
+                    </div>
+                    
                 </div>
             </div>
             <!-- <div class="two">
