general touch on styles and apperance

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </nav>
     </header>
-    <div class="subNavContainer">
+    <!-- <div class="subNavContainer">
       <div class="subNav">
         <div id="sideMenuHead">
           <span id="openSideMenu" onclick="openSideMenu()"
@@ -50,7 +50,7 @@
           /></span>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--this is the parent class of all the pages-->
     <div class="container">
@@ -223,6 +223,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">SOLID STATE DRIVE</div>
@@ -230,6 +238,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">CHARGERS</div>
@@ -237,6 +253,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">STICKERS</div>
@@ -244,6 +268,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">ACCESSORIES</div>
@@ -251,6 +283,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">PENDRIVES AND CARDS</div>
@@ -258,6 +298,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">CABLES</div>
@@ -265,6 +313,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
             <div class="items">
               <div class="title">SOMETHING</div>
@@ -272,6 +328,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
                 molestiae magni a quas minima corrupti!
               </p>
+              <div class="sub_features">
+                <div class="buy">
+                  <span>BUY</span>
+                </div>
+                <div class="view">
+                  <span>VIEW</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
