--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <div class="container">
       <div class="home" id="home">
         <div class="home">
-          <?php 
-            echo "helo world";
-          ?>
           <h3>YOU BREAK IT <strong>?</strong></h3>
           <h1>
             WE FIX IT
-            <div class="bulb"><div id="inner"></div></div>
+            <div class="toollogo">
+              <div class="bulb"><div id="inner"></div></div>
+              <img src="./images/tool.png" alt="" />
+            </div>
           </h1>
           <p>
             Welcome to <b>iFiX</b>, your trusted computer repair experts. We
@@ -437,7 +437,7 @@
       <div class="appointment" id="appointment">
         <h1>TELL US YOUR PROBLEMS</h1>
         <h2>Book an appointment</h2>
-        <div class="mainContainer">
+        <div class="appointment_pallet">
           <label for="">Name</label>
           <input type="text" name="" id="" />
           <br />
@@ -447,7 +447,7 @@
           <label for="">Whatsapp / Telephhome</label>
           <input type="text" name="" id="" />
           <br />
-          <label for="">Reason for Appointment</label>
+          <label for="">Select the service you need</label>
           <input type="text" name="" id="" />
           <br />
           <label for="">Name</label>
@@ -600,7 +600,7 @@
                 <h4>Email:</h4>
                 <input type="text" id="email" />
                 <h4>Message:</h4>
-                <input type="text" /> <br />
+                <textarea name="" id="" cols="30" rows="10"></textarea>
                 <button>Submit</button> <br />
 
                 <span
