UPDATED HTML JOIN US AND CSS

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
       <!--this is the markup for the jobs page / page jobs (4)-->
       <div class="jobs" id="jobs">
-        <h1>JOIN OUR TEAM TODAY</h1>
+        <h1>JOIN US</h1>
         <h3>Apply to any home of the vaccancies below</h3>
         <div>
           <div class="jobPallet" onclick="expandPallet(this)">
