--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
             provide top-notch services for individuals and businesses, from
             software and hardware troubleshooting to virus removal and data
             recovery. With our skilled technicians and commitment to customer
-            satisfaction, we deliver efficient and affordable solutions. Visit
-            our website as often as you wish to learn more and schedule an
-            appointment today.
+            satisfaction, we deliver efficient and affordable solutions.
           </p>
           <button>FIX PC</button>
         </div>
