--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </p>
           </div>
           <div class="items">
-            <div class="title">NEservicesRKING AND INTERNET ISSUES</div>
+            <div class="title">NETWORKING AND INTERNET ISSUES</div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
               molestiae magni a quas minima corrupti!
