worked on the responsiveness

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <img class="filtered_background" src="./images/peakpx (3).jpg" alt="" />
     <header>
       <nav>
-        <a href="#" id="home" onclick="makeActive(this)">
-          <div class="logo">
-            <img src="./images/IFIX LOGO.png" alt="logo" />
-            <p>COMPUTER SERVICES</p>
-          </div>
-        </a>
+        <div class="logo">
+          <img src="./images/IFIX LOGO.png" alt="logo" />
+          <p>COMPUTER SERVICES</p>
+        </div>
+
         <!-- <div class="navlinks"> -->
         <ul id="navlinks">
           <li><a href="#">Home</a></li>
@@ -30,12 +29,14 @@
           <li><a href="#howTo">HowTo's</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <!-- <img id="navigation-menu" onclick="showNav" src="./images/icons/navigation-menu.svg" alt="">
-                    <img id="close-circled" onclick="hideNav" src="./images/icons/close-circled.svg" alt=""> -->
-        <!-- </div> -->
+
         <div class="signInUp">
           <button>sign in</button>
           <button>sign Up</button>
+          <div class="nav_icon">
+            <img id="nav_icon" src="./images/icons/navigationmenu.png" alt="" />
+            <img id="nav_icon" src="./images/icons/closecircled.png" alt="" />
+          </div>
         </div>
       </nav>
     </header>
