--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
         <div class="signInUp">
           <button>sign in</button>
           <button>sign Up</button>
-          <div class="nav_icon">
-            <img id="nav_icon" src="./images/icons/navigationmenu.png" alt="" />
-            <img id="nav_icon" src="./images/icons/closecircled.png" alt="" />
-          </div>
+        </div>
+        <div class="nav_icon">
+          <img
+            id="nav_open"
+            onclick="toggleNavopen()"
+            src="./images/icons/navigationmenu.png"
+            alt=""
+          />
+          <img
+            id="nav_close"
+            onclick="toggleNavclose()"
+            src="./images/icons/closecircled.png"
+            alt=""
+          />
         </div>
       </nav>
     </header>
