--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         </div>
 
         <!-- <div class="navlinks"> -->
-        <ul id="navlinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#store">Store</a></li>
-          <li><a href="#jobs">Jobs</a></li>
-          <li><a href="#appointment">Appointment</a></li>
-          <li><a href="#howTo">HowTo's</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+        <div class="navlinks">
+          <ul id="navlinks">
+            <li><a href="#">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#store">Store</a></li>
+            <li><a href="#jobs">Jobs</a></li>
+            <li><a href="#appointment">Appointment</a></li>
+            <li><a href="#howTo">HowTo's</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
 
         <div class="signInUp">
           <button>sign in</button>
