responsiveness for smaller screens

--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
             </div>
           </h1>
           <p>
-            Welcome to <b>iFiX</b>, your trusted computer repair experts. We
-            provide top-notch services for individuals and businesses, from
-            software and hardware troubleshooting to virus removal and data
-            recovery. With our skilled technicians and commitment to customer
-            satisfaction, we deliver efficient and affordable solutions.
+            Welcome to <b style="color: #00ffff">iFiX</b>, your trusted computer
+            repair experts. We provide top-notch services for individuals and
+            businesses, from software and hardware troubleshooting to virus
+            removal and data recovery.
+            <!-- With our skilled technicians and
+            commitment to customer satisfaction, we deliver efficient and
+            affordable solutions. -->
           </p>
           <button>FIX PC</button>
         </div>
@@ -363,7 +365,9 @@
         <div class="pageheader"></div>
 
         <h1>JOIN US</h1>
-        <h3>Apply to any home of the vaccancies below</h3>
+        <h3 style="text-align: center; font-size: 13px; color: #00ffff">
+          Apply to any home of the vaccancies below
+        </h3>
         <div class="innerDiv">
           <div class="jobPallet" onclick="expandPallet(this)">
             <div class="jobTitle">
