--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iFiX</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" href="./images/IFIX LOGO.png" type="image/x-icon" />
   </head>
   <body>
     <div class="shader"></div>
@@ -36,7 +37,7 @@
           <button>sign in</button>
           <button>sign Up</button>
         </div>
-        <div class="nav_icon">
+        <div class="nav_icon"> 
           <img
             id="nav_open"
             onclick="toggleNavopen()"
@@ -359,6 +360,8 @@
           </div>
         </div>
       </div>
+
+
 
       <!--this is the markup for the jobs page / page jobs (4)-->
       <div class="jobs" id="jobs">
