store features and item images added

--- a/index.html
+++ b/index.html
@@ -248,10 +248,9 @@
           <div class="storeItems mainMenu">
             <div class="items">
               <div class="title">HARD DISK DRIVE (HDD)</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/internal hard disc.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -263,10 +262,9 @@
             </div>
             <div class="items">
               <div class="title">SOLID STATE DRIVE</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/ssd m2.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -278,10 +276,9 @@
             </div>
             <div class="items">
               <div class="title">CHARGERS</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/chargers.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -293,10 +290,9 @@
             </div>
             <div class="items">
               <div class="title">STICKERS</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/icons/LAPTOPSTICKERS.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -308,10 +304,9 @@
             </div>
             <div class="items">
               <div class="title">ACCESSORIES</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/wieless mouse and keyboard.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -323,10 +318,9 @@
             </div>
             <div class="items">
               <div class="title">PENDRIVES AND CARDS</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/pendrive.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -338,10 +332,9 @@
             </div>
             <div class="items">
               <div class="title">CABLES</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/icons/CABLES.webp" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
@@ -353,10 +346,9 @@
             </div>
             <div class="items">
               <div class="title">SOMETHING</div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                molestiae magni a quas minima corrupti!
-              </p>
+              <div class="item-image">
+                <img src="./images/battery.jpeg" alt="" />
+              </div>
               <div class="sub_features">
                 <div class="buy">
                   <span>BUY</span>
