--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
             </p>
           </div>
           <div class="items">
-            <div class="title">WINDOWS PASSWORD BYPASS</div>
+            <div class="title">PASSWORD BYPASS</div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
               molestiae magni a quas minima corrupti!
             </p>
           </div>
           <div class="items">
-            <div class="title">UPGRADE YOUR LAPTOP</div>
+            <div class="title">UPGRADE LAPTOP</div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
               molestiae magni a quas minima corrupti!
@@ -157,7 +157,7 @@
             </p>
           </div>
           <div class="items">
-            <div class="title">VIRUS AND MALWARE ATTACK</div>
+            <div class="title">VIRUS & MALWARE ATTACK</div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
               molestiae magni a quas minima corrupti!
@@ -345,7 +345,7 @@
               </div>
             </div>
             <div class="items">
-              <div class="title">SOMETHING</div>
+              <div class="title">BATTERY</div>
               <div class="item-image">
                 <img src="./images/battery.jpeg" alt="" />
               </div>
