updated html and css

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 
         <div class="service" id="services">
           <div class="pageheader"></div>
+          <h3 style="font-size: 14px">
+            Cllick to add a service to the cart. Book a day and time so we meet
+            you at your place or expect you at our premise.
+          </h3>
           <div class="items">
             <div class="title">
               <span> OS INSTALLATIONS</span>
@@ -134,7 +138,7 @@
             <button>ADD TO CART</button>
           </div>
           <div class="items">
-            <div class="title">NETWORKING AND INTERNET ISSUES</div>
+            <div class="title">NETWORKING & INTERNET ISSUES</div>
             <p>
               From low level networking issues like "NO INTERNET ACCESS" to high
               level ones like configuring and setting up a HOME, OFFICE OR
